--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -6,7 +6,50 @@
     android:layout_height="match_parent"
     tools:context=".ChatActivity">
 
-    <!-- TextView for sender's name at the top -->
+    <!-- Back Icon -->
+    <ImageView
+        android:id="@+id/btn_back"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/ic_back"
+        android:contentDescription="Back"
+        android:background="?android:attr/selectableItemBackground"
+        android:padding="12dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/profile_section"
+        android:orientation="horizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="16dp"
+        android:gravity="center_vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btn_back"
+        app:layout_constraintEnd_toEndOf="parent">
+
+    <!-- Profile Image (CardView to make it circular) -->
+    <androidx.cardview.widget.CardView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="12dp"
+        android:elevation="4dp"
+        app:cardCornerRadius="100dp">
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@drawable/gear"/>
+    </androidx.cardview.widget.CardView>
+
+    <!-- Sender's Name -->
     <TextView
         android:id="@+id/tv_sender_name"
         android:layout_width="wrap_content"
@@ -14,52 +57,60 @@
         android:text="Sender Name"
         android:textSize="16sp"
         android:textColor="@android:color/black"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_gravity="center_vertical"
+        android:maxLines="1"
+        android:ellipsize="end" />
+</LinearLayout>
+
+    <!-- Line Border (Separator between Profile and RecyclerView) -->
+    <View
+    android:id="@+id/line_border"
+    android:layout_width="0dp"
+    android:layout_height="1dp"
+    android:layout_marginTop="8dp"
+    android:background="@android:color/darker_gray"
+    app:layout_constraintTop_toBottomOf="@id/profile_section"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- RecyclerView for displaying messages -->
-
-    <!-- EditText for typing messages -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_messages"
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:clipToPadding="false"
-        android:padding="8dp"
-        app:layout_constraintBottom_toTopOf="@id/et_message"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_sender_name" />
+    android:id="@+id/rv_messages"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:clipToPadding="false"
+    android:padding="8dp"
+    app:layout_constraintTop_toBottomOf="@id/line_border"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toTopOf="@id/et_message" />
 
+    <!-- Message Input Field -->
     <EditText
-        android:id="@+id/et_message"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Type a message"
-        android:layout_margin="8dp"
-        android:padding="12dp"
-        android:inputType="text"
-        android:maxLines="1"
-        app:layout_constraintTop_toBottomOf="@id/rv_messages"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn_send"/>
+    android:id="@+id/et_message"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:hint="Type a message"
+    android:layout_margin="8dp"
+    android:padding="12dp"
+    android:inputType="text"
+    android:maxLines="1"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toStartOf="@id/btn_send"
+    app:layout_constraintBottom_toBottomOf="parent" />
 
     <!-- Send Button -->
     <Button
-        android:id="@+id/btn_send"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_margin="8dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/send"
-        android:contentDescription="Send message"
-        android:text="Send"
-        android:textColor="@android:color/white"
-        app:layout_constraintStart_toEndOf="@id/et_message"
-        app:layout_constraintTop_toBottomOf="@id/et_message"
-        app:layout_constraintEnd_toEndOf="parent"/>
+    android:id="@+id/btn_send"
+    android:layout_width="45dp"
+    android:layout_height="45dp"
+    android:layout_margin="5dp"
+    android:layout_marginEnd="16dp"
+    android:background="@drawable/send"
+    android:contentDescription="Send message"
+    android:text="Send"
+    android:textColor="@android:color/white"
+    app:layout_constraintTop_toTopOf="@id/et_message"
+    app:layout_constraintEnd_toEndOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
