--- a/app/src/main/res/layout/fragment_notification_buyer.xml
+++ b/app/src/main/res/layout/fragment_notification_buyer.xml
@@ -1,61 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="16dp">
+    tools:context=".NotificationFragmentSeller">
 
-    <!-- Title Section -->
+    <!-- TextView for the notification section title or description -->
     <TextView
-        android:id="@+id/notificationTitle"
-        android:layout_width="0dp"
+        android:id="@+id/notificationHeader"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Notifications"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:gravity="center"
+        android:textSize="18sp"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Tabs for All/Unread -->
-    <LinearLayout
-        android:id="@+id/tabLayout"
+    <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/notificationTitle"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/notificationHeader"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp">
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        <TextView
-            android:id="@+id/tabAll"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="All"
-            android:textSize="16sp"
-            android:layout_marginEnd="16dp"
-            android:textColor="@android:color/black"/>
-
-        <TextView
-            android:id="@+id/tabUnread"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Unread"
-            android:textSize="16sp"
-            android:textColor="@android:color/black"/>
-    </LinearLayout>
-
-    <!-- RecyclerView for Notifications -->
+    <!-- RecyclerView for displaying notifications -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/notificationRecyclerView"
+        android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:scrollbars="vertical"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout"
+        app:layout_constraintTop_toBottomOf="@id/progressBar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
