--- a/app/src/main/res/layout/fragment_home_seller.xml
+++ b/app/src/main/res/layout/fragment_home_seller.xml
@@ -70,6 +70,7 @@
                 android:gravity="center"
                 android:textColor="@android:color/white"
                 android:textSize="17sp"
+                android:editable="false"
                 android:textStyle="bold"
                 android:layout_marginStart="10dp"
                 app:layout_constraintEnd_toEndOf="@id/icon_message"
